# ztour

./: .gitignore  CMakeLists.txt  README.md
include/ztour/: base.h  base_def.h  base_inc.h  hook_inst.h  ptr.h  ztour.h
src/: CMakeLists.txt  atomic_call_gate.h  base.cpp  decoder.cpp  decoder.h  encoder.cpp  encoder.h  hook_inst.cpp  hook_inst_inner.cpp  hook_inst_inner.h  mem_page.cpp  mem_page.h  memory.cpp  memory.h  mutex_holder.h  relocation.cpp  relocation.h  ztour.cpp
src/zydis/: CMakeLists.txt  Zydis.h
tests/: CMakeLists.txt  testmain.cpp
